--- a/tests/test-pokerserver-run-load.py.in
+++ b/tests/test-pokerserver-run-load.py.in
@@ -42,7 +42,7 @@ settings_xml_server_open_options = """<?xml version="1.0" encoding="UTF-8"?>
   <database name="pokernetworktest" host="localhost" user="pokernetworktest" password="pokernetwork"
             root_user="@MYSQL_TEST_DBROOT@" root_password="@MYSQL_TEST_DBROOT_PASSWORD@" schema="@srcdir@/../../database/schema.sql" command="@MYSQL@" />
   <path>.. ../@srcdir@ @POKER_ENGINE_PKGDATADIR@/conf @POKER_NETWORK_PKGSYSCONFDIR@ %(additional_path)s</path>
-  <users temporary="BOT"/>
+  <users temporary="BOT.*"/>
 </server>
 """
 # ------------------------------------------------------------    
