--- a/tests/conf/poker.server.xml.in
+++ b/tests/conf/poker.server.xml.in
@@ -47,5 +47,5 @@
 
   <database name="@POKER_DATABASE@" host="@POKER_DBHOST@" user="@POKER_DBUSER@" password="@POKER_DBUSER_PASSWORD@" />
   <path>@POKER_ENGINE_PKGDATADIR@/conf @POKER_NETWORK_PKGSYSCONFDIR@</path> 
-  <users temporary="BOT" />
+  <users temporary="BOT.*" />
 </server>
