--- a/tests/test-pokerserver.py.in
+++ b/tests/test-pokerserver.py.in
@@ -66,7 +66,7 @@ settings_xml_server_manhole = """<?xml version="1.0" encoding="UTF-8"?>
   <database name="pokernetworktest" host="localhost" user="pokernetworktest" password="pokernetwork"
             root_user="@MYSQL_TEST_DBROOT@" root_password="@MYSQL_TEST_DBROOT_PASSWORD@" schema="@srcdir@/../../database/schema.sql" command="@MYSQL@" />
   <path>.. ../@srcdir@ @POKER_ENGINE_PKGDATADIR@/conf @POKER_NETWORK_PKGSYSCONFDIR@</path>
-  <users temporary="BOT"/>
+  <users temporary="BOT.*"/>
 </server>
 """
 
@@ -122,7 +122,7 @@ settings_xml_server_open_options = """<?xml version="1.0" encoding="UTF-8"?>
   <database name="pokernetworktest" host="localhost" user="pokernetworktest" password="pokernetwork"
             root_user="@MYSQL_TEST_DBROOT@" root_password="@MYSQL_TEST_DBROOT_PASSWORD@" schema="@srcdir@/../../database/schema.sql" command="@MYSQL@" />
   <path>.. ../@srcdir@ @POKER_ENGINE_PKGDATADIR@/conf %(additional_path)s</path>
-  <users temporary="BOT"/>
+  <users temporary="BOT.*"/>
 </server>
 """
 # ----------------------------------------------------------------
