--- a/tests/test-pokeravatar.py.in
+++ b/tests/test-pokeravatar.py.in
@@ -4769,25 +4769,21 @@ class PokerAvatarTablePickerTestCase(PokerAvatarTablePickerBaseClass):
         return d
     # ------------------------------------------------------------------------
     def test07_tablePicker_shouldNotPickFullTableEvenIfPlayerSitsOut(self):
-        d = defer.succeed(True)
         table = self.service.getTable(1)
         table.autodeal = False
         table = self.service.getTable(2)
         table.autodeal = False
-        d.addCallback(self.startPlayerSeatedAndPlaying, 1, "NL HE 10-max 100/200", "100-200-no-limit", "holdem", 10, 1) # 0
-        d.addCallback(self.startPlayerSeatedAndPlaying, 1, "NL HE 10-max 100/200", "100-200-no-limit", "holdem", 10, 1) # 1
-        d.addCallback(self.startPlayerSeatedAndPlaying, 1, "NL HE 10-max 100/200", "100-200-no-limit", "holdem", 10, 1) # 2
-        d.addCallback(self.startPlayerSeatedAndPlaying, 1, "NL HE 10-max 100/200", "100-200-no-limit", "holdem", 10, 1) # 3
-        d.addCallback(self.startPlayerSeatedAndPlaying, 1, "NL HE 10-max 100/200", "100-200-no-limit", "holdem", 10, 1) # 4
-        d.addCallback(self.startPlayerSeatedAndPlaying, 1, "NL HE 10-max 100/200", "100-200-no-limit", "holdem", 10, 1) # 5
-        d.addCallback(self.startPlayerSeatedAndPlaying, 1, "NL HE 10-max 100/200", "100-200-no-limit", "holdem", 10, 1) # 6
-        d.addCallback(self.startPlayerSeatedAndPlaying, 1, "NL HE 10-max 100/200", "100-200-no-limit", "holdem", 10, 1) # 7
-        d.addCallback(self.startPlayerSeatedAndPlaying, 1, "NL HE 10-max 100/200", "100-200-no-limit", "holdem", 10, 1) # 8
-        d.addCallback(self.startPlayerSeatedAndPlaying, 1, "NL HE 10-max 100/200", "100-200-no-limit", "holdem", 10, 1) # 9
+        defs = []
+        for idx in range(13):
+            if idx < 10:
+                d = self.startPlayerSeatedAndPlaying(idx, 1, "NL HE 10-max 100/200", "100-200-no-limit", "holdem", 10, 1)
+                if idx == 9:
         d.addCallback(self.sitOut, 9, 1)
-        d.addCallback(self.startPlayerSeatedAndPlaying, 2, "NL HE 6-max 100/200", "100-200-no-limit", "holdem", 6, 1)   # 10
-        d.addCallback(self.startPlayerSeatedAndPlaying, 2, "NL HE 6-max 100/200", "100-200-no-limit", "holdem", 6, 1)   # 11
-        d.addCallback(self.startPlayerSeatedAndPlaying, 2, "NL HE 6-max 100/200", "100-200-no-limit", "holdem", 6, 1)   # 12
+            else:
+                d = self.startPlayerSeatedAndPlaying(idx, 2, "NL HE 6-max 100/200", "100-200-no-limit", "holdem", 6, 1)
+            defs.append(d)
+
+        dl = defer.DeferredList(defs)
 
         def check(result):
             playerNumber = len(self.client_factory)
@@ -4796,31 +4792,23 @@ class PokerAvatarTablePickerTestCase(PokerAvatarTablePickerBaseClass):
             pickerDeferred.addCallback(self.tablePickerSucceeds, playerNumber, 3, 0,
                                        "holdem", "100-200-no-limit", 2, "NL HE 6-max 100/200")
             return pickerDeferred
-        d.addCallback(check)
-        return d
+        dl.addCallback(check)
+        return dl
     # ------------------------------------------------------------------------
     def test08_tablePicker_failureBecauseAllTablesMeetingCriteriaAreFull(self):
-        d = defer.succeed(True)
         table = self.service.getTable(1)
         table.autodeal = False
         table = self.service.getTable(2)
         table.autodeal = False
-        d.addCallback(self.startPlayerSeatedAndPlaying, 1, "NL HE 10-max 100/200", "100-200-no-limit", "holdem", 10, 1) # 0
-        d.addCallback(self.startPlayerSeatedAndPlaying, 1, "NL HE 10-max 100/200", "100-200-no-limit", "holdem", 10, 1) # 1
-        d.addCallback(self.startPlayerSeatedAndPlaying, 1, "NL HE 10-max 100/200", "100-200-no-limit", "holdem", 10, 1) # 2
-        d.addCallback(self.startPlayerSeatedAndPlaying, 1, "NL HE 10-max 100/200", "100-200-no-limit", "holdem", 10, 1) # 3
-        d.addCallback(self.startPlayerSeatedAndPlaying, 1, "NL HE 10-max 100/200", "100-200-no-limit", "holdem", 10, 1) # 4
-        d.addCallback(self.startPlayerSeatedAndPlaying, 1, "NL HE 10-max 100/200", "100-200-no-limit", "holdem", 10, 1) # 5
-        d.addCallback(self.startPlayerSeatedAndPlaying, 1, "NL HE 10-max 100/200", "100-200-no-limit", "holdem", 10, 1) # 6
-        d.addCallback(self.startPlayerSeatedAndPlaying, 1, "NL HE 10-max 100/200", "100-200-no-limit", "holdem", 10, 1) # 7
-        d.addCallback(self.startPlayerSeatedAndPlaying, 1, "NL HE 10-max 100/200", "100-200-no-limit", "holdem", 10, 1) # 8
-        d.addCallback(self.startPlayerSeatedAndPlaying, 1, "NL HE 10-max 100/200", "100-200-no-limit", "holdem", 10, 1) # 9
-        d.addCallback(self.startPlayerSeatedAndPlaying, 2, "NL HE 6-max 100/200", "100-200-no-limit", "holdem", 6, 1)   # 10
-        d.addCallback(self.startPlayerSeatedAndPlaying, 2, "NL HE 6-max 100/200", "100-200-no-limit", "holdem", 6, 1)   # 11
-        d.addCallback(self.startPlayerSeatedAndPlaying, 2, "NL HE 6-max 100/200", "100-200-no-limit", "holdem", 6, 1)   # 12
-        d.addCallback(self.startPlayerSeatedAndPlaying, 2, "NL HE 6-max 100/200", "100-200-no-limit", "holdem", 6, 1)   # 13
-        d.addCallback(self.startPlayerSeatedAndPlaying, 2, "NL HE 6-max 100/200", "100-200-no-limit", "holdem", 6, 1)   # 14
-        d.addCallback(self.startPlayerSeatedAndPlaying, 2, "NL HE 6-max 100/200", "100-200-no-limit", "holdem", 6, 1)   # 15
+        defs = []
+        for idx in range(16):
+            if idx < 10:
+                d = self.startPlayerSeatedAndPlaying(idx, 1, "NL HE 10-max 100/200", "100-200-no-limit", "holdem", 10, 1)
+            else:
+                d = self.startPlayerSeatedAndPlaying(idx, 2, "NL HE 6-max 100/200", "100-200-no-limit", "holdem", 6, 1)
+            defs.append(d)
+
+        dl = defer.DeferredList(defs)
 
         def check(result):
             playerNumber = len(self.client_factory)
@@ -4829,7 +4817,7 @@ class PokerAvatarTablePickerTestCase(PokerAvatarTablePickerBaseClass):
             pickerDeferred.addCallback(self.tablePickerFails, playerNumber, 3, 0,
                                        "holdem", "100-200-no-limit")
             return pickerDeferred
-        d.addCallback(check)
+        dl.addCallback(check)
         return d
     # ------------------------------------------------------------------------
 
